unpackaged/main/default/objects/zkmulti__ShipmateGeneralSettings__c/zkmulti__ShipmateGeneralSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores ZenKraft Shipmate app custom settings for general settings. There should only be one record max per org. If utilized, the record must be created manually and the fields must be set manually.</description>
    <label>Shipmate General Settings</label>
</CustomObject>