unpackaged/main/default/objects/zkmulti__ShipmateGeneralSettings__c/fields/zkmulti__Allow_Edit_of_Used_Custom_Item__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Allow_Edit_of_Used_Custom_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Edit of Used Custom Item</label>
    <type>Checkbox</type>
</CustomField>