unpackaged/main/default/objects/zkmulti__ShipmateGeneralSettings__c/fields/zkmulti__ConvertNonAscii__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ConvertNonAscii__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convert non ascii characters for labels</label>
    <type>Checkbox</type>
</CustomField>