unpackaged/main/default/objects/zkmulti__ShipmateGeneralSettings__c/fields/zkmulti__DisableRateShipForInvalidAddress__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__DisableRateShipForInvalidAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Rate/Shipment Generation for Invalid Address (FedEx)</description>
    <inlineHelpText>Disable Rate/Shipment Generation for Invalid Address (FedEx)</inlineHelpText>
    <label>Disable Rate/Ship for Invalid Address</label>
    <type>Checkbox</type>
</CustomField>