unpackaged/main/default/objects/zkmulti__ShipmateGeneralSettings__c/fields/zkmulti__Enable_Dynamic_Fill_Fields__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Enable_Dynamic_Fill_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Dynamic Fill Fields: dynamically found fields by id from URL parameters for wizard page</description>
    <label>Enable Dynamic Fill Fields</label>
    <type>Checkbox</type>
</CustomField>