unpackaged/main/default/objects/zkmulti__ShipmateGeneralSettings__c/fields/zkmulti__FedExAllowAccountNumberTracking__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__FedExAllowAccountNumberTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Account Number for Tracking (FedEx)</label>
    <type>Checkbox</type>
</CustomField>