unpackaged/main/default/objects/zkmulti__ShipmateGeneralSettings__c/fields/zkmulti__IgnoreAddressValidation__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__IgnoreAddressValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>UPS only</description>
    <inlineHelpText>UPS only</inlineHelpText>
    <label>Ignore Address Validation</label>
    <type>Checkbox</type>
</CustomField>