unpackaged/main/default/objects/zkmulti__ShipmateGeneralSettings__c/fields/zkmulti__IgnoreMaxJobLimitForScheduledTrack__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__IgnoreMaxJobLimitForScheduledTrack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Max Job Limit for Scheduled Track</label>
    <type>Checkbox</type>
</CustomField>