unpackaged/main/default/objects/zkmulti__ShipmateGeneralSettings__c/fields/zkmulti__OnlyAllowValidatedShipments__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__OnlyAllowValidatedShipments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only Allow Validated Shipments (FedEx)</description>
    <inlineHelpText>Only Allow Validated Shipments (FedEx)</inlineHelpText>
    <label>Only Allow Validated Shipments (FedEx)</label>
    <type>Checkbox</type>
</CustomField>