unpackaged/main/default/objects/zkmulti__ShipmateGeneralSettings__c/fields/zkmulti__RecordPrintHistories__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__RecordPrintHistories__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Record Print Histories</label>
    <type>Checkbox</type>
</CustomField>