unpackaged/main/default/objects/zkmulti__ShipmateGeneralSettings__c/fields/zkmulti__RecordShippingCheckpoints__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__RecordShippingCheckpoints__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Record Shipping Checkpoints</label>
    <type>Checkbox</type>
</CustomField>