unpackaged/main/default/objects/zkmulti__ShipmateGeneralSettings__c/fields/zkmulti__Run_Demo_Mode__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Run_Demo_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Demo Mode</label>
    <type>Checkbox</type>
</CustomField>