unpackaged/main/default/objects/zkmulti__ShipmateGeneralSettings__c/fields/zkmulti__UpdateShipmentFieldsFromTracking__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__UpdateShipmentFieldsFromTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Shipment Fields From Tracking</label>
    <type>Checkbox</type>
</CustomField>