unpackaged/main/default/objects/zkmulti__ShipmateGeneralSettings__c/fields/zkmulti__UseFiles__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__UseFiles__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Save labels to Salesforce File</description>
    <label>Use Files</label>
    <type>Checkbox</type>
</CustomField>