unpackaged/main/default/objects/zkmulti__ShipmateGeneralSettings__c/fields/zkmulti__UseListRates__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__UseListRates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Only Show FedEx List Rates</label>
    <type>Checkbox</type>
</CustomField>