unpackaged/main/default/objects/zkmulti__ShipmateGeneralSettings__c/fields/zkmulti__USPSTracking__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__USPSTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>USPS Tracking</label>
    <type>Checkbox</type>
</CustomField>